<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#fff"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"

        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">








    <LinearLayout
        android:visibility="visible"
        android:id="@+id/linear1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.piyaso.softforest.piyaso.customfonts.MyTextViewMavenPro
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Iphone 7s"
            android:textColor="@color/text"
            android:textSize="26dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            />

        <com.piyaso.softforest.piyaso.customfonts.MyTextViewMavenPro
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Best quality Product"
            android:textColor="#ff5e5c"
            android:textSize="14dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            />

        <View
            android:id="@+id/action_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colordevider"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="156dp"
            android:layout_marginTop="16dp"
            />

        <com.piyaso.softforest.piyaso.customfonts.MyTextViewMavenPro
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$99"
            android:textColor="@color/text"
            android:textSize="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            />

        <com.piyaso.softforest.piyaso.customfonts.MyTextViewMavenPro
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Product Detail"
            android:textColor="@color/text"
            android:textSize="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            />

        <com.piyaso.softforest.piyaso.customfonts.MyTextViewMavenPro
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A progressive casual runner, Motion provides long lasting comfort, traction and flexibility in an upper of breathable materials with a distinctive cage-inspired eye stay. A lightweight sole with a deep geometric."
            android:textColor="@color/subtext"
            android:textSize="14dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="5dp"
            />
    </LinearLayout>


            <LinearLayout
                android:layout_marginTop="18dp"
                android:id="@+id/spinnerlinear"
                android:layout_below="@id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   >

            </LinearLayout>

                <com.piyaso.softforest.piyaso.customfonts.MyTextViewMavenPro

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="A progressive casual runner, Motion provides long lasting comfort, traction and flexibility in an upper of breathable materials with a distinctive cage-inspired eye stay. A lightweight sole with a deep geometric."
                    android:textColor="@color/subtext"
                    android:textSize="14dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="5dp"/>
            </LinearLayout>


            <!--*******ADD TO BAG********-->


            <LinearLayout
                android:id="@+id/addtobag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text"
                android:layout_below="@+id/spinnerlinear"
                android:layout_marginRight="190dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="16dp">

                <com.piyaso.softforest.piyaso.customfonts.MyTextViewMavenPro
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ADD  TO  BAG"
                    android:textColor="#fff"
                    android:textSize="17dp"
                    android:gravity="center"
                    android:letterSpacing="0.09"/>

            </LinearLayout>

            <!--*******WISHLIST********-->

            <LinearLayout
                android:id="@+id/wishlist"
                android:layout_below="@+id/addtobag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                >

              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">



                  <com.piyaso.softforest.piyaso.customfonts.MyTextViewMavenPro
                      android:layout_weight="1"
                      android:padding="16dp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:drawableLeft="@drawable/fav"
                      android:gravity="center"
                      android:drawablePadding="9dp"
                      android:textSize="14dp"
                      android:textColor="@color/text"
                      android:text="@string/Wishlist"
                      />

                  <com.piyaso.softforest.piyaso.customfonts.MyTextViewMavenPro
                      android:layout_weight="1"
                      android:padding="16dp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:drawableLeft="@drawable/share"
                      android:gravity="center"
                      android:drawablePadding="9dp"
                      android:textSize="14dp"
                      android:textColor="@color/text"
                      android:text="@string/Share"

                      />
              </LinearLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_marginTop="19dp"
                android:layout_below="@+id/wishlist"
                android:id="@+id/highlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <com.piyaso.softforest.piyaso.customfonts.MyTextViewMavenPro
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/higlights"
                    />

                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="55dp"
                    >

                    <!--*******HIGHTOP DESIGN********-->

                    <LinearLayout
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/design"
                            android:gravity="center"
                            />

                        <com.piyaso.softforest.piyaso.customfonts.MyTextViewMavenPro
                            android:layout_marginTop="11dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="HIGHTOP DESIGN"
                            android:textSize="12dp"
                            android:textColor="@color/text"
                            android:gravity="center"

                            />
                    </LinearLayout>

                    <!--*******LEATHER********-->

                    <LinearLayout
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/leather"
                            android:gravity="center"
                            />

                        <com.piyaso.softforest.piyaso.customfonts.MyTextViewMavenPro
                            android:layout_marginTop="11dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="PURE LEATHER"
                            android:textSize="12dp"
                            android:textColor="@color/text"
                            android:gravity="center"
                            />
                    </LinearLayout>



                    <!--*******SKATE********-->

                    <LinearLayout
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="bottom"
                        >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/skate"
                            android:gravity="center"
                            />

                        <com.piyaso.softforest.piyaso.customfonts.MyTextViewMavenPro
                            android:layout_marginTop="11dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="SKATE SUITABLE"
                            android:textSize="12dp"
                            android:textColor="@color/text"
                            android:gravity="center"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>






</RelativeLayout>
</LinearLayout>

    </ScrollView>
</RelativeLayout>
